#599 Fixed outline on enemies when tapping shift key.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -450,6 +450,7 @@ html, body, #map, #app, .wrapper {
 .leaflet-marker-icon.leaflet-div-icon:not(.leaflet-editing-icon):not(.leaflet-edit-marker-selected) {
     border: none;
     background-color: unset;
+    outline: none !important;
 }
 
 .leaflet-verticalcenter {
